--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -14,39 +14,38 @@
 
 
 <ion-content padding>
-  <h1 class="username">Username: {{username}}</h1>
-  <ion-card>
+  <ion-card *ngFor="let filme of list_movies">
 
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/imgs/marty-avatar.png">
       </ion-avatar>
-      <h2>Gabriel Thiago</h2>
-      <p>November 5, 1955</p>
+      <h2>{{filme.title}}</h2>
+      <p>{{filme.release_date}}</p>
     </ion-item>
 
-    <img src="assets/imgs/advance-card-bttf.png">
+    <img [src]="'https://image.tmdb.org/t/p/w300' + filme.backdrop_path">
 
     <ion-card-content>
-      <p>Tô programando pacaraima.</p>
+      <p>{{filme.overview}}</p>
     </ion-card-content>
 
     <ion-row>
       <ion-col>
         <button ion-button icon-start clear small>
           <ion-icon name="thumbs-up"></ion-icon>
-          <div>12 Likes</div>
+          <div>{{feed.qnt_likes}} Likes</div>
         </button>
       </ion-col>
       <ion-col>
         <button ion-button icon-start clear small>
           <ion-icon name="text"></ion-icon>
-          <div>4 Comments</div>
+          <div>{{feed.qnt_comments}} Comments</div>
         </button>
       </ion-col>
       <ion-col center text-center>
         <ion-note>
-          11h ago
+          {{feed.time_post}}
         </ion-note>
       </ion-col>
     </ion-row>
