--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the AboutPage page.
+  Generated template for the ProfilePage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -10,7 +10,7 @@
     <button ion-button icon-only menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>about</ion-title>
+    <ion-title>profile</ion-title>
   </ion-navbar>
 
 </ion-header>
