end of course, added camera plugin

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -17,5 +17,6 @@
 
 
 <ion-content padding>
-
+  <img *ngIf="img" [src]="img" alt="image">
+  <button ion-button block (click)="tirarFoto()">Tirar Foto</button>
 </ion-content>
